--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://8.152.196.221/
+url: https://codefishzhou.github.io/
 root: /codefish/
 
 
