--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -2,7 +2,7 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - prod
+      - deploy
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install and Build
         run: |
+          mv _config_prod.yml _config.yml
           npm install
           npm run clean
           npm run build
