--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -23,13 +23,18 @@ jobs:
           npm run clean
           npm run build
           cp -r img/* public/img/
-          mv public codefish
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.SSH_PRIVATE_KEY }}
           publish_dir: ./public
+
+      # - name: Install and Build
+      #   run: |
+      #     mv _config_deploy.yml _config.yml
+      #     mv public codefish
+
       # - name: FTP Deploy
       #   uses: SamKirkland/FTP-Deploy-Action@4.0.0
       #   with:
